Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133215

[Reg 6.6 -> 6.8] QMainWindow removes titlebar exception

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 6.8.1
    • QPA
    • None
    • macOS
    • 16081f414 (dev), a833d93f5 (6.9), a3571d55f (6.8)

      After setting stylemask | = nswindowstylemaskfullsizecontent view, the height of titlebar is still there, and qt6.6 does not have this problem.

        For Gerrit Dashboard: QTBUG-133215
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            wenbing wenbing zhang
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes